Updated the docstrings for the methods in the operators module.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ paramancer/__pycache__/
 paramancer/operators/__pycache__/
 paramancer/optim/__pycache__/
 paramancer/bloptim/__pycache__/
+storming.md
